channels/sip/config_parser.c
@@ -79,6 +79,9 @@ int sip_parse_register_line(struct sip_registry *reg, int default_expiry, const 
 		AST_APP_ARG(port);
 	);
 
+	reg->expire = -1;
+	reg->timeout = -1;
+
 	if (!value) {
 		return -1;
 	}
@@ -261,7 +264,6 @@ int sip_parse_register_line(struct sip_registry *reg, int default_expiry, const 
 	ast_string_field_set(reg, regdomain, ast_strip_quoted(S_OR(user2.domain, ""), "\"", "\""));
 
 	reg->transport = transport;
-	reg->timeout = reg->expire = -1;
 	reg->portno = portnum;
 	reg->regdomainport = domainport;
 	reg->callid_valid = FALSE;
